--- a/views/partial/locatesidebar.ejs
+++ b/views/partial/locatesidebar.ejs
@@ -1,4 +1,4 @@
 <div class="addressswrap">
 	<div class="locatename"><i class="fa fa-map-marker"></i><%-d.locatename%></div>
-	<div class="locatecount">共 <%-d.count%> 篇文章 </div>
+	<div class="locatecount">共 <%-d.count%> 条记录 </div>
 </div>
