--- a/views/partial/tagssidebar.ejs
+++ b/views/partial/tagssidebar.ejs
@@ -1,4 +1,4 @@
 <div class="tagswrap">
 	<div class="tagname"><i class="fa fa-tag"></i><%-d.tagname%></div>	
-	<div class="tagcount">共 <%-d.count%> 篇文章 </div>
+	<div class="tagcount">共 <%-d.count%> 条记录 </div>
 </div>
