--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -123,6 +123,32 @@
 	position: relative;
 	overflow: visible;
 }
+
+.tag-item a:hover{
+	opacity: 0.8;
+}
+.label-item a { 
+    text-decoration: none;
+    font-weight: 400;
+    background-color: #DFE2E6;
+    font-size: 10px;
+    color: #999;
+    height: 18px;
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
+    line-height: 18px;
+    float: left;
+    padding: 0 10px 0 10px;
+    position: relative; 
+    margin: 0 2px 0 3px;
+}  
+.label-item{
+	list-style: none;
+	float:left;
+} 
+.label-item a:hover {
+	opacity: 0.8;
+}
+
 .other-article-info{
 	padding:0px 20px;
 }
