--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -54,7 +54,7 @@ var replies = d.replies;
 					for(var j=0 ;j<labelarr.length-1;j++){
 						%>
 						<li class="label-item">
-							<a class="color<%=Math.floor(Math.random() * 5 + 1)%>" href="/tags/<%- labelarr[j]%>/"  style="font-size: 12px;"><%- labelarr[j]%></a>
+							<a href="/tags/<%- labelarr[j]%>/"  style="font-size: 12px;"><%- labelarr[j]%></a>
 						</li>
 						<%}%>
 					</ul>
