--- a/views/message.ejs
+++ b/views/message.ejs
@@ -20,10 +20,10 @@
 							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 关注你了 </div>
 						<%}%>   
 						<%if(message.type === "at"){%>
-							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 在帖子 <a href="/article/<%=message.tid %>"><%=message.displayinforeply %></a> 中@你了 </div>
+							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 在帖子 <a href="/t/<%=message.tid %>"><%=message.displayinforeply %></a> 中@你了 </div>
 						<%}%>   
 						<%if(message.type === "reply"){%>
-								<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 回复了你的帖子 <a href="/article/<%=message.tid %>"><%=message.displayinforeply %></a></div>
+								<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 回复了你的帖子 <a href="/t/<%=message.tid %>"><%=message.displayinforeply %></a></div>
 						<%}%>  
 					<%}%>
 				</div>		
@@ -43,10 +43,10 @@
 							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 关注你了 </div>
 						<%}%>   
 						<%if(message.type === "at"){%>
-							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 在帖子 <a href="/article/<%=message.tid %>"><%=message.displayinforeply %></a> 中@你了 </div>
+							<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 在帖子 <a href="/t/<%=message.tid %>"><%=message.displayinforeply %></a> 中@你了 </div>
 						<%}%>   
 						<%if(message.type === "reply"){%>
-								<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 回复了你的帖子 <a href="/article/<%=message.tid %>"><%=message.displayinforeply %></a></div>
+								<div class="msgitem"><%=message.createdate %> >> <a href="/user/<%=message.author.name %>"><%=message.author.name %></a> 回复了你的帖子 <a href="/t/<%=message.tid %>"><%=message.displayinforeply %></a></div>
 						<%}%>  
 					<%}%>
 				</div>		 
