--- a/views/admin/addsite.ejs
+++ b/views/admin/addsite.ejs
@@ -9,13 +9,12 @@
   <!-- content start -->
   <div class="admin-content">
     <div class="am-cf am-padding">
-      <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">Site </strong><small>/ Site 增加</small></div>
+      <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">Site 新增 </strong><small>/ Site 新增</small></div>
     </div>
     <div class="am-u-sm-12 am-u-md-6">
       <div class="am-btn-toolbar">
         <div class="am-btn-group am-btn-group-xs">
-          <a type="button" class="am-btn am-btn-default" href="/admin/addarticle"><span class="am-icon-plus"></span> 新增</a>
-          <button type="button" class="am-btn am-btn-default" data-am-modal="{target: '#linkmodal', closeViaDimmer: 0, width: 400, height: 225}"><span class="am-icon-trash-o"></span> 删除</button>
+          <a type="button" class="am-btn am-btn-default" href="/admin/updatesiteindex"><span class="am-icon-recycle"></span> 更新</a> 
         </div>
       </div>
     </div>
