--- a/views/admin/partial/catasidebar.ejs
+++ b/views/admin/partial/catasidebar.ejs
@@ -2,23 +2,25 @@
 	<div class="am-offcanvas-bar admin-offcanvas-bar">
 		<ul class="am-list admin-sidebar-list"> 
 				<li>
-					<a data-am-collapse="{target: '#collapse-nav'}">
+					<a data-am-collapse="{target: '#siteman'}">
 						<span class="am-icon-th "></span> Site管理<span class="am-icon-angle-right am-fr am-margin-right"></span>
 					</a>
-					<ul class="am-list admin-sidebar-sub am-collapse am-in" id="collapse-nav">
+					<ul class="am-list admin-sidebar-sub am-collapse am-in" id="siteman">
 					<li>
-						<a href="/admin/updatesiteindex"  class="am-cf"><span class="am-icon-puzzle-piece"></span>  Site 更新<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
-						<li><a href="/admin/addsiteindex"><span class="am-icon-pencil-square-o"></span>  Site 新增</a></li>
+						<a href="/admin/addsiteindex"  class="am-cf"><span class="am-icon-puzzle-piece"></span>  Site 新增<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a>
+					</li>
+					<li>
+						<a href="/admin/updatesiteindex"><span class="am-icon-pencil-square-o">  Site 更新</span></a></li>
 					</ul>
 				</li> 
 				<li>
-					<a data-am-collapse="{target: '#collapse-nav'}">
+					<a data-am-collapse="{target: '#articleman'}">
 						<span class="am-icon-file "></span> 文章管理<span class="am-icon-angle-right am-fr am-margin-right"></span>
 					</a>
-					<ul class="am-list admin-sidebar-sub am-collapse am-in" id="collapse-nav">
-					<li>
-						<a href="/admin/list"  class="am-cf"><span class="am-icon-list"></span> 文章列表<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
-						<li><a href="/admin/addarticle"><span class="am-icon-pencil-square-o"></span> 增加文章</a></li>
+					<ul class="am-list admin-sidebar-sub am-collapse am-in" id="articleman">
+						<li><a href="/admin/addarticle"><span class="am-icon-pencil-square-o"></span> 增加文章<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
+						<li>
+						<a href="/admin/list"  class="am-cf"><span class="am-icon-list"></span> 文章列表</a></li>
 					</ul>
 				</li>
 				<li><a href="/admin/logout"><span class="am-icon-sign-out"></span> 注销</a></li>
