--- a/views/admin/partial/header.ejs
+++ b/views/admin/partial/header.ejs
@@ -11,13 +11,10 @@
 	<link rel="icon" href="/images/favicon.ico">    
 	<link rel='stylesheet' href='/stylesheets/admin/amazeui.css' />  
 	<link rel='stylesheet' href='/stylesheets/admin/admin.min.css' />  
+	<link rel='stylesheet' href='/stylesheets/admin/editor.css' />  
 	<script   src="/javascripts/admin/jquery.min.js"></script> 
 	<script   src="/javascripts/admin/jquery.form.js"></script> 
- 	<script   src="/javascripts/admin/admin.js"></script> 
 	<script   src="/javascripts/admin/amazeui.min.js"></script>   
-  
-
-    <script type="text/javascript" charset="utf-8" src="/javascripts/admin/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/javascripts/admin/ueditor.all.min.js"> </script>
-
-    <script type="text/javascript" charset="utf-8" src="/javascripts/lang/zh-cn/zh-cn.js"></script>
+	<script   src="/javascripts/admin/editor.js"></script>    
+	<script   src="/javascripts/admin/marked.js"></script>   
+ 	<script   src="/javascripts/admin/admin.js"></script> 
