整合后ç后台前ç

--- a/views/admin/partial/header.ejs
+++ b/views/admin/partial/header.ejs
@@ -13,8 +13,8 @@
 	<link rel='stylesheet' href='/stylesheets/admin/admin.min.css' />  
 	<link rel='stylesheet' href='/stylesheets/admin/editor.css' />  
 	<script   src="/javascripts/admin/jquery.min.js"></script> 
-	<script   src="/javascripts/admin/jquery.form.js"></script> 
+	<script   src="/javascripts/admin/jquery.form.min.js"></script> 
 	<script   src="/javascripts/admin/amazeui.min.js"></script>   
-	<script   src="/javascripts/admin/editor.js"></script>    
-	<script   src="/javascripts/admin/marked.js"></script>   
- 	<script   src="/javascripts/admin/admin.js"></script> 
+	<script   src="/javascripts/admin/editor.min.js"></script>    
+	<script   src="/javascripts/admin/marked.min.js"></script>   
+ 	<script   src="/javascripts/admin/admin.min.js"></script> 
