--- a/views/admin/updatearticle.ejs
+++ b/views/admin/updatearticle.ejs
@@ -40,7 +40,7 @@
 				<div class="am-form-group am-form-file">
 					<label for="doc-ipt-3" class="am-u-sm-2 am-form-label">内容</label>
 					<div class="am-u-sm-10">
-						<textarea type="text" class="writebox textarea" name="mcontent" id="postcontent" placeholder="写点什么呢?"><%-article.title%></textarea> 
+						<textarea type="text" class="writebox textarea" name="mcontent" id="postcontent" placeholder="写点什么呢?"><%-article.mcontent %></textarea> 
 					</div>
 				</div>
 			</div> 
