--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
 									var labelarr = result[i].label.split(",");
 									for(var j=0 ;j<((labelarr.length-1)>4?4:(labelarr.length-1));j++){
 										%> 
-											<a href="/tags/<%- labelarr[j]%>/" ><%- labelarr[j]%></a> 
+											<a href="/tag/<%- labelarr[j]%>/" ><%- labelarr[j]%></a> 
 										<%}%> 
 									<%}
 								}%>
