--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -11,7 +11,7 @@
 	<link rel="icon" href="/images/favicon.ico">   
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel='stylesheet' href='/stylesheets/build.min.css' /> 
-	<script src="/javascripts/marked.js"></script>  	
+	<script src="/javascripts/marked.min.js"></script>  	
 <script type="text/javascript">
 	<% if(locals.pageflag == 3){%>
 	  var route = "pub";
@@ -20,5 +20,5 @@
 		<%}%>
 </script>
 
-<script  data-main="/javascripts/main.min.js" src="/javascripts/require.js"></script> 
+<script  data-main="/javascripts/main.min.js" src="/javascripts/require.min.js"></script> 
  
