--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,6 +98,15 @@
 					<%}}%>
 				</div>
 				<% include partial/pagination%>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- shouye -->
+					<ins class="adsbygoogle"
+					     style="display:inline-block;width:728px;height:90px"
+					     data-ad-client="ca-pub-4947257507951598"
+					     data-ad-slot="8456581869"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 			</div> 
 			<div style="clear:both"></div>
 
