--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -18,9 +18,9 @@
 					<div>
 						<div> 
 							<% if(result[i].title &&result[i].title.length > 0 ){%>
-							<p class="article_title"><a href="/t/<%= result[i].tid %>"><%= result[i].title %></a></p>
+							<p class="item_title"><a href="/t/<%= result[i].tid %>"><%= result[i].title %></a></p>
 							<%}%>							
-							<div class="article_msg_content"><%- result[i].newcontent %> </div>
+							<div class="msg_content"><%- result[i].newcontent %> </div>
 						</div>
 					<div class="otherinfowrap">
 							<div class="articledate">
