--- a/views/user.ejs
+++ b/views/user.ejs
@@ -100,7 +100,7 @@
 								</div>
 							</div>
 					<%}else{%>
-							<span class="nomore">全部显示了</span>
+							<div class="nomore">全部显示了</div>
 					<%}%>
 						</div>
 				</div>
