--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -51,10 +51,11 @@
 	color: #999
 } 
 .article_head_info{
-	padding:5px 0px;
+	padding: 5px 5px 10px 5px;
+    border-bottom: 1px solid #E0E0E0;
 }
 .article_head_info a{	
-	font:15px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
+	font:14px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
 	color: #838383;
 }
 
@@ -70,11 +71,14 @@
 .reply_user_name a:hover {
 	color: #07695E; 
 }
-.article_head_info span:before {
+.article_head_info span:nth-child(2):before {
+	content: "•";
+}
+.article_head_info span:nth-child(3):before {
 	content: "•";
 }
 .article_head_info span{ 
-	font:15px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
+	font:14px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
 	color: #838383;
 }
 .reply_date:before {
@@ -197,11 +201,9 @@
 }
 .detail_msg_head{
 	font-size: 19px;
-	color: #383838;
-	background-color: #f5f5f5;
-	padding: 8px 10px;
-	line-height: 19px;
-	height: 38px;
+	color: #383838; 
+	padding: 5px 10px;
+	line-height: 19px; 
 }
 .no_reply_notice{
 	padding: 20px 0px;
