--- a/source/stylesheets/sidebar.css
+++ b/source/stylesheets/sidebar.css
@@ -43,6 +43,17 @@
 	padding: 5px 0px;
 	color: #707070;
 }
+.userinfo{ 
+    padding: 10px 0px;
+}
+.baseinfo{
+	background-color: #f5f5f5;
+	padding:10px;
+}
+.baseinfo-name{
+	font-size: 22px;
+    line-height: 42px;
+}
 .intropre {
 	padding: 12px; 
 	border: 1px dashed #AABBDD;
