--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -27,13 +27,13 @@
 					<li class="dropdown">
        			    	<a class="dropdown-toggle optionaccess" data-toggle="dropdown" href="#" id="optionaccess"><%=locals.userinfo.name %><sup class="badge"><%=(locals.userinfo.msgcount!== 0)?locals.userinfo.msgcount:'' %></sup><span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu" id="optionaccesslist">
-						        <li><a href="/pub"> 发布一个</a></li> 
+						        <li><a href="/pub"><i class="fa fa-edit"></i> 发布一个</a></li> 
 						        <li class="divider"></li>
-						        <li><a href="/user/<%=locals.userinfo.name %>">个人中心</a></li>
-						        <li><a href="/set">个人设置</a></li>  
-						        <li><a href="/message">消息<span class="badge"><%=(locals.userinfo.msgcount!== 0)?locals.userinfo.msgcount:'' %></span></a></li> 
+						        <li><a href="/user/<%=locals.userinfo.name %>"><i class="fa fa-circle-o-notch"></i>  个人中心</a></li>
+						        <li><a href="/set"> <i class="fa fa-cog"> </i> 账号设置</a></li>  
+						        <li><a href="/message"><i class="fa fa-bell"></i>  通知<span class="badge"><%=(locals.userinfo.msgcount!== 0)?locals.userinfo.msgcount:'' %></span></a></li> 
 						        <li class="divider"></li>
-							 	<li><a href="/logout">安全登出</a></li>	
+							 	<li><a href="/logout"><i class="fa fa-sign-out"></i> 安全登出</a></li>	
 					        </ul>  
 					    </a> 
 					</li> 
