--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -37,7 +37,7 @@ ul{
 	border-radius: 0px;
 }
 .mainwrap { 
-	width: 70%;
+	width: 970px;
 	min-height: 400px;
 	margin: 10px auto 0;
 	margin-top: 70px; 
