--- a/source/stylesheets/build.css
+++ b/source/stylesheets/build.css
@@ -1435,7 +1435,8 @@ abbr[data-original-title],abbr[title] {
 blockquote {
 	padding: 10px 20px;
 	margin: 0 0 20px;
-	font-size: 17.5px;
+	font-size: 16.5px;
+    color: #807D7D;
 	border-left: 5px solid #eee
 }
 
@@ -6577,8 +6578,8 @@ button.close {
 	background-color: #fff;
 }
 .reply_msg_item {
-	border-top: 1px solid #E0E0E0;
-	padding: 15px 20px 15px 20px;
+	border-top: 1px solid #EAE7E7;
+	padding: 10px 20px;
 	overflow: hidden;
 }
 
@@ -6608,7 +6609,8 @@ button.close {
 }
 
 .reply_info span {
-	color: #999
+	color: #999;
+	font-size: 12px;
 } 
 .article_head_info{
 	padding: 5px 5px 10px 5px;
@@ -6652,7 +6654,9 @@ button.close {
 	color: #645A5A;
 }
 .reply_info .opt {
-	float: right
+	float: right;
+	font-size: 12px;
+	opacity: 0.6;
 }
 .replyat{
 	color: #999;
@@ -6697,9 +6701,9 @@ button.close {
     background-color: #DFE2E6;
     font-size: 10px;
     color: #999;
-    height: 18px;
+    height: 19px;
     box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
-    line-height: 18px;
+    line-height: 19px;
     float: left;
     padding: 0 10px 0 10px;
     position: relative; 
@@ -6709,8 +6713,8 @@ button.close {
 	list-style: none;
 	float:left;
 } 
-.label-item a:hover {
-	opacity: 0.8;
+.label-item a:hover { 
+    background-color: #CCC;
 }
 
 .other-article-info{
@@ -6762,7 +6766,7 @@ button.close {
 .detail_msg_head{
 	font-size: 19px;
 	color: #383838; 
-	padding: 5px 10px;
+	padding: 10px 10px;
 	line-height: 19px; 
 }
 .no_reply_notice{
@@ -7516,7 +7520,7 @@ button.close {
 	-o-transition: all 0.25s; /* Opera */
 }
 .container{
-	width:70% !important;
+	width:970px !important;
 	padding-right: 0px !important;
 	padding-left: 0px !important;
 }
@@ -7694,14 +7698,25 @@ button.close {
 	padding: 0px;
 }
 #optionaccesslist li a {
+	position: relative;
 	background: #0C8176;
 	display: block;
 	padding: 3px 20px;
+	height: 34px;
 	clear: both;
 	font-weight: 400;
-	line-height: 1.42857143;
+	line-height: 34px;
 	color: #fff;
 	white-space: nowrap;
+}
+
+#optionaccesslist li a i{
+	display: block;
+    position: absolute;
+    left: 15px;
+    top: 13px;
+    width: 16px;
+    height: 16px;
 }
 #optionaccesslist li a:hover{
 	background-color: #0B685F;
@@ -7753,7 +7768,7 @@ a.optionaccess:hover {
 }  
 .reg_login ul {
 	min-width: 100px;
-	width: 100px;
+	width: 133px;
 	left: -15px;
 	background-color: #0C8176;
 	padding: 0px;
@@ -7881,85 +7896,105 @@ a.optionaccess:hover {
 	margin-top: 10px;
 	float: left
 }
-.tagswrap{
+.tagswrap {
 	margin-top: 20px;
 }
-.tagname{
+
+.tagname {
 	padding: 5px 0px;
 	font-size: 18px;
 }
-.tagname i{
+
+.tagname i {
 	margin-right: 5px;
 }
-.tagcount{
+
+.tagcount {
 	font-size: 15px;
 	padding: 5px 0px;
 	color: #707070;
 }
-.locatewrap{
+
+.locatewrap {
 	margin-top: 20px;
 }
-.locatename{
+
+.locatename {
 	padding: 5px 0px;
 	font-size: 18px;
 }
-.locatename i{
+
+.locatename i {
 	margin-right: 5px;
 }
-.locatecount{
+
+.locatecount {
 	font-size: 15px;
 	padding: 5px 0px;
 	color: #707070;
 }
-.sitewrap{
+
+.sitewrap {
 	margin-top: 20px;
 }
-.sitename{
+
+.sitename {
 	padding: 5px 0px;
 	font-size: 18px;
 }
-.sitename i{
+
+.sitename i {
 	margin-right: 5px;
 }
-.sitecount{
+
+.sitecount {
 	font-size: 15px;
 	padding: 5px 0px;
 	color: #707070;
 }
-.userinfo{ 
-    padding: 10px 0px;
+
+.userinfo {
+	padding: 10px 0px;
 }
-.baseinfo{
+
+.baseinfo {
 	background-color: #f5f5f5;
-	padding:10px;
+	padding: 10px;
 }
-.baseinfo-name{
+
+.baseinfo-name {
 	font-size: 22px;
-    line-height: 42px;
+	line-height: 42px;
 }
+
 .intropre {
-	padding: 12px; 
+	padding: 12px;
 	border: 1px dashed #AABBDD;
 	border-radius: 0;
 	background-color: #f5f5f5;
-	padding:10px;
+	padding: 10px;
 }
-.baseinfo p{
-	margin: 5px 0 10px;
+
+.baseinfo p {
+	margin: 5px;
 }
-.followme,.hefollow {
+
+.followme,
+.hefollow {
 	overflow: hidden;
-	margin-top: 5px; 
+	margin-top: 5px;
 }
-.followlist_wrap{
+
+.followlist_wrap {
 	overflow: hidden;
 	margin-top: 10px;
-	padding: 30px 10px 10px 30px;	
+	padding: 30px 10px 10px 30px;
 }
-.follower a:hover{ 
-	color: #07695E; 
+
+.follower a:hover {
+	color: #07695E;
 }
-}
+
 .follower p {
 	font-size: 20px;
 	line-height: 1em;
@@ -7982,14 +8017,15 @@ a.optionaccess:hover {
 	text-align: center;
 	font-size: 12px
 }
-.follower_title{
-	 font-size: 18px; 
-	 margin-top: 15px; 
-	 height: 33px;
-	 border-bottom: 2px solid #DCDDD9; 
-} 
 
-.follower_title .followernum{
+.follower_title {
+	font-size: 18px;
+	margin-top: 15px;
+	height: 33px;
+	border-bottom: 2px solid #DCDDD9;
+}
+
+.follower_title .followernum {
 	border-bottom: 2px solid #00a090;
 	padding: 5px 3px;
 	position: relative;
@@ -7997,26 +8033,30 @@ a.optionaccess:hover {
 	margin-bottom: -2px;
 	display: inline-block;
 	color: #555;
-} 
-.fansuserlink{
+}
+
+.fansuserlink {
 	width: 100%;
 	height: 40px;
 	display: block;
 }
-.fansuserlink:hover{
+
+.fansuserlink:hover {
 	background-color: #F0F0F0;
 }
-.followerwrap{
+
+.followerwrap {
 	height: 40px;
 	width: 100%;
-	padding: 5px 5px; 
+	padding: 5px 5px;
 	line-height: 18px;
 	float: left;
 	text-align: center;
 	font-size: 12px;
 	border-bottom: 1px solid #eee;
 }
-.followerwrap .imagewrap{
+
+.followerwrap .imagewrap {
 	width: 30px;
 	height: 30px;
 	display: block;
@@ -8025,44 +8065,51 @@ a.optionaccess:hover {
 	display: inline-block;
 	float: left;
 }
-.followerwrap .namewrap{
+
+.followerwrap .namewrap {
 	display: inline-block;
 	float: left;
 	height: 30px;
 	margin-left: 20px;
 	line-height: 30px;
 }
-.followerwrap img{
+
+.followerwrap img {
 	width: 30px;
 	height: 30px;
 	display: block;
 	margin: 0 auto;
 	border-radius: 30px;
 }
-.more_follower{
-	color:#747C81;
+
+.more_follower {
+	color: #747C81;
 	float: right;
 	font-size: 16px;
 	height: 25px;
 	line-height: 40px;
 }
 
-.site_intro{
+.site_intro {
 	margin-top: 20px;
 }
-.site_list a{	
-	transition:all 0.5s;
-	line-height: 25px; 
-} 
-.site_list a:hover{
+
+.site_list a {
+	transition: all 0.5s;
+	line-height: 25px;
+}
+
+.site_list a:hover {
 	background: #fff;
-	color: #07695E; 
+	color: #07695E;
 	margin-left: 20px;
-} 
-.pubone{
+}
+
+.pubone {
 	padding-bottom: 30px;
 }
-.pubone a{
+
+.pubone a {
 	position: relative;
 	display: block;
 	margin: 0 auto;
@@ -8072,12 +8119,13 @@ a.optionaccess:hover {
 	font-size: 31px;
 	line-height: 60px;
 	color: #FFF;
-	text-align: center; 
+	text-align: center;
 	-webkit-transition: color .3s;
 	-moz-transition: color .3s;
 	transition: color .3s;
 }
-.downloadapp a{
+
+.downloadapp a {
 	position: relative;
 	display: block;
 	margin: 0 auto;
@@ -8087,16 +8135,18 @@ a.optionaccess:hover {
 	font-size: 31px;
 	line-height: 60px;
 	color: #FFF;
-	text-align: center; 
+	text-align: center;
 	-webkit-transition: color .3s;
 	-moz-transition: color .3s;
 	transition: color .3s;
 }
-.downloadapp a:hover{
+
+.downloadapp a:hover {
 	background-color: rgba(128, 144, 160, 1);
 	color: #fff;
 	text-decoration: none;
 }
+
 .pubone a::before {
 	position: absolute;
 	top: 40%;
@@ -8124,15 +8174,16 @@ a.optionaccess:hover {
 .pubone a:focus {
 	color: #FFF;
 }
-.everyday{
+
+.everyday {
 	position: relative;
 	overflow: hidden;
 	width: 100%;
 	height: 133px;
-	border-radius: 5px;
 	-webkit-user-select: none;
-} 
-.everyday:hover .everyday_img{
+}
+
+.everyday:hover .everyday_img {
 	-webkit-transition: all .8s;
 	-moz-transition: all .8s;
 	transition: all .8s;
@@ -8142,67 +8193,78 @@ a.optionaccess:hover {
 	-ms-transform: scale(1.1);
 	-o-transform: scale(1.1);
 	transform: scale(1.1);
-}   
-.everyday:hover .everyday_text_cn{
-	-webkit-transition: all .8s;
-	-moz-transition: all .8s;
-	transition: all .8s;
-   	visibility: hidden;
-	-webkit-transform:  translateX(-100%) ;
 }
-.everyday:hover .everyday_text_en{
-	-webkit-transition: all .8s;
-	-moz-transition: all .8s;
-	transition: all .8s;
-   visibility: visible;
-  -webkit-transform:  translateX(0) ;
-}
-.everyday_text{
-	position: absolute;
-	width: 100%; 
-	vertical-align:middle;
-	z-index: 33;
 
+.everyday:hover .everyday_text_cn {
+	-webkit-transition: all .8s;
+	-moz-transition: all .8s;
+	transition: all .8s;
+	visibility: hidden;
+	-webkit-transform: translateX(-100%);
 }
-.everyday_text_cn, .everyday_text_en{
+
+.everyday:hover .everyday_text_en {
+	-webkit-transition: all .8s;
+	-moz-transition: all .8s;
+	transition: all .8s;
+	visibility: visible;
+	-webkit-transform: translateX(0);
+}
+
+.everyday_text {
+	position: absolute;
+	width: 100%;
+	vertical-align: middle;
+	z-index: 33;
+}
+
+.everyday_text_cn,
+.everyday_text_en {
 	position: absolute;
 	top: 0px;
-	color: #637EAD;
+	color: #FAFAFA;
 	font-size: 15px;
 	line-height: 27px;
 	margin: 10px
 }
-.everyday_text_en{	
-  -webkit-transform:  translateX(-100%) ;
-  -webkit-transition: all 0.5s ease-in-out;
-  visibility: hidden;
-} 
-.everyday_text_cn{	
-  -webkit-transform:  translateX(0px) ;
-  -webkit-transition: all 0.5s ease-in-out;
-  margin-top: 25px;
-  visibility: visible;
-} 
-.pubnotice{	
+
+.everyday_text_en {
+	-webkit-transform: translateX(-100%);
+	-webkit-transition: all 0.5s ease-in-out;
+	visibility: hidden;
+}
+
+.everyday_text_cn {
+	-webkit-transform: translateX(0px);
+	-webkit-transition: all 0.5s ease-in-out;
+	margin-top: 25px;
+	visibility: visible;
+}
+
+.pubnotice {
 	margin-top: 20px;
 }
-.pubnotice li{
+
+.pubnotice li {
 	font-size: 16px;
 	line-height: 2em;
 	list-style: square;
 }
-.pubnotice li div{
+
+.pubnotice li div {
 	font-size: 15px;
 	line-height: 1.8em;
 }
-.editnotice{
+
+.editnotice {
 	margin-top: 20px;
 }
-.markdown-notice li{  
+
+.markdown-notice li {
 	font-size: 15px;
 	line-height: 1.8em;
 	list-style: none;
-} 
+}
 #gotopbtn {
 	position: fixed;
 	text-align: center;
@@ -8636,7 +8698,7 @@ ul{
 	border-radius: 0px;
 }
 .mainwrap { 
-	width: 70%;
+	width: 970px;
 	min-height: 400px;
 	margin: 10px auto 0;
 	margin-top: 70px; 
@@ -9173,7 +9235,7 @@ ul{
 .webui-popover i.icon-refresh {
   display: block;
   width: 30px;
-  height: 30px;
+  height: 35px;
   font-size: 20px; 
   position: relative;
   margin: 0 auto;
