--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -17,8 +17,8 @@
 	background-color: #fff;
 }
 .reply_msg_item {
-	border-top: 1px solid #E0E0E0;
-	padding: 15px 20px 15px 20px;
+	border-top: 1px solid #EAE7E7;
+	padding: 10px 20px;
 	overflow: hidden;
 }
 
@@ -48,7 +48,8 @@
 }
 
 .reply_info span {
-	color: #999
+	color: #999;
+	font-size: 12px;
 } 
 .article_head_info{
 	padding: 5px 5px 10px 5px;
@@ -92,7 +93,9 @@
 	color: #645A5A;
 }
 .reply_info .opt {
-	float: right
+	float: right;
+	font-size: 12px;
+	opacity: 0.6;
 }
 .replyat{
 	color: #999;
@@ -137,9 +140,9 @@
     background-color: #DFE2E6;
     font-size: 10px;
     color: #999;
-    height: 18px;
+    height: 19px;
     box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
-    line-height: 18px;
+    line-height: 19px;
     float: left;
     padding: 0 10px 0 10px;
     position: relative; 
@@ -149,8 +152,8 @@
 	list-style: none;
 	float:left;
 } 
-.label-item a:hover {
-	opacity: 0.8;
+.label-item a:hover { 
+    background-color: #CCC;
 }
 
 .other-article-info{
@@ -202,7 +205,7 @@
 .detail_msg_head{
 	font-size: 19px;
 	color: #383838; 
-	padding: 5px 10px;
+	padding: 10px 10px;
 	line-height: 19px; 
 }
 .no_reply_notice{
