--- a/source/stylesheets/bootstrap.css
+++ b/source/stylesheets/bootstrap.css
@@ -1435,7 +1435,8 @@ abbr[data-original-title],abbr[title] {
 blockquote {
 	padding: 10px 20px;
 	margin: 0 0 20px;
-	font-size: 17.5px;
+	font-size: 16.5px;
+    color: #807D7D;
 	border-left: 5px solid #eee
 }
 
