--- a/source/stylesheets/nav.css
+++ b/source/stylesheets/nav.css
@@ -64,7 +64,7 @@
 	-o-transition: all 0.25s; /* Opera */
 }
 .container{
-	width:70% !important;
+	width:970px !important;
 	padding-right: 0px !important;
 	padding-left: 0px !important;
 }
@@ -242,14 +242,25 @@
 	padding: 0px;
 }
 #optionaccesslist li a {
+	position: relative;
 	background: #0C8176;
 	display: block;
 	padding: 3px 20px;
+	height: 34px;
 	clear: both;
 	font-weight: 400;
-	line-height: 1.42857143;
+	line-height: 34px;
 	color: #fff;
 	white-space: nowrap;
+}
+
+#optionaccesslist li a i{
+	display: block;
+    position: absolute;
+    left: 15px;
+    top: 13px;
+    width: 16px;
+    height: 16px;
 }
 #optionaccesslist li a:hover{
 	background-color: #0B685F;
@@ -301,7 +312,7 @@ a.optionaccess:hover {
 }  
 .reg_login ul {
 	min-width: 100px;
-	width: 100px;
+	width: 133px;
 	left: -15px;
 	background-color: #0C8176;
 	padding: 0px;
